// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders SliderField with labels correctly 1`] = `
<div
  className="sliderField"
>
  <p
    className="sc-eCssSg bHjGEK"
  >
    New slider with labels
  </p>
  <div
    className="sliderWrapper"
  >
    <div
      className="sc-aemoO iIASIk"
      max={3}
      min={0}
      value={2}
    >
      <input
        aria-labelledby="New slider with labels"
        className="sc-TmcTc kXaNaA"
        id="New slider with labels-thumb"
        max={3}
        min={0}
        onChange={[Function]}
        onKeyUp={[Function]}
        onMouseUp={[Function]}
        step={1}
        type="range"
        value={2}
      />
      <output
        className="sc-dwfUOf cBYssx"
        htmlFor="New slider with labels-thumb"
        value={2}
      >
        C
      </output>
      <div
        className="sc-jONnTn sc-hlTvYk lpkCeB ciFSdt"
      />
      <span
        className="sc-fWSCIC cUIkTY"
      >
        A
      </span>
      <span
        className="sc-fWSCIC cUIkTY"
      >
        D
      </span>
    </div>
  </div>
</div>
`;

exports[`renders SliderField with numeric values correctly  1`] = `
<div
  className="sliderField"
>
  <p
    className="sc-eCssSg bHjGEK"
  >
    New slider
  </p>
  <div
    className="sliderWrapper"
  >
    <div
      className="sc-aemoO bKeWSN"
      max={5}
      min={0}
      value={1}
    >
      <input
        aria-labelledby="New slider"
        className="sc-TmcTc kXaNaA"
        id="New slider-thumb"
        max={5}
        min={0}
        onChange={[Function]}
        onKeyUp={[Function]}
        onMouseUp={[Function]}
        step={1}
        type="range"
        value={1}
      />
      <output
        className="sc-dwfUOf lfWHNa"
        htmlFor="New slider-thumb"
        value={1}
      >
        1
      </output>
      <div
        className="sc-jONnTn sc-hlTvYk lpkCeB ciFSdt"
      />
      <span
        className="sc-fWSCIC cUIkTY"
      >
        0
      </span>
      <span
        className="sc-fWSCIC cUIkTY"
      >
        5
      </span>
    </div>
  </div>
</div>
`;
